<resources>
    <string name="app_name">Studify</string>

    <!-- Strings related to get_started -->
    <string name="get_started">Get Started</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <!-- Strings related to reset_password fragment -->
    <string name="action_reset_password">Reset Password</string>
    <string name="action_back">Back</string>
    <string name="action_send_reset_email">Send Reset Email</string>

    <!-- Strings related to main fragment -->
    <string name="button_profile">Profile</string>
    <string name="logged_in">you are now logged in!</string>


    <!-- Strings related to profile fragment -->
    <string name="button_change_pic">Change Profile Picture</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="button_log_out">Log Out</string>

    <!-- Strings related to edit_profile fragment -->
    <string name="action_update_profile">Update Profile</string>
    <string name="action_delete_profile">Delete Profile</string>
    <string name="action_change_pic">Change Profile Picture</string>
    <string name="prompt_new_username">New Username</string>
    <string name="button_done">Done</string>


    <!-- Strings related to room_list -->
    <string name="create_room">Create Room</string>
    <string name="group_study_room_title">Group Study Rooms</string>
    <string name="button_join_room">Join Room</string>
    <string name="button_create_room">Create Room</string>
    <string name="add_room_id">Enter Room ID</string>
    <string name="room_id">Room ID:</string>
    <string name="button_leave_room">Leave Room</string>

    <!-- Strings related to input_task fragment -->
    <string name="add_task">Add Task</string>
    <string name="add_task_name">Task</string>
    <string name="add_task_name_hint">Task...</string>
    <string name="add_taskTime">Time</string>
    <string name="add_taskTime_hint">Time...</string>
    <string name="save_task">Save</string>
    <string name="cancel_task">Cancel</string>

    <!-- Strings related to task_list -->
    <string name="task_list_title">Create Tasks</string>
</resources>