<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F4F7"
        android:padding="10dp"
        tools:context=".views.MainActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/change_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_default_profile"
            android:layout_marginTop="40dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/button_change_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="48dp"
            android:text="@string/action_change_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_profile_image"/>

        <EditText
            android:id="@+id/change_username"
            style="@style/user_text_input"
            android:textColorHint="#C0C0C0"
            android:hint="@string/prompt_new_username"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_change_pic"/>

        <Button
            android:id="@+id/button_update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="48dp"
            android:text="@string/action_update_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_username"/>


        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/action_delete_profile"
            app:layout_constraintBottom_toBottomOf="@id/botGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_update_profile" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/botGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>